# Mandelbrot-IPC

./: CMakeLists.txt
app/: CMakeLists.txt  dialog.cpp  dialog.hpp  dialog.ui  main.cpp  mandelbrotcalculator.cpp  mandelbrotcalculator.hpp  mandelbrotwidget.cpp  mandelbrotwidget.hpp  workerclient.cpp  workerclient.hpp
sdk/: CMakeLists.txt  jobrequest.hpp  jobresult.hpp  message.hpp  messageutils.hpp
worker/: CMakeLists.txt  application.cpp  application.hpp  job.cpp  job.hpp  main.cpp  worker.cpp  worker.hpp
